--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div id="how" class="column">
           <h2 class="title-2">how to dog</h2>
           <img class="image--circle column-image " src="images/dog2-sq.jpg" alt="dog">
-          <div class="text-wrapper"><p id="how-text" class="column-text">Dat tungg tho pupperino length boy. borkdrive aqua doggo. Maximum borkdrive long doggo extremely cuuuuuute you are doing me the shock borkf , heckin good boys doggo doge. The heighborhood pupper borkf smol corgo long water snoob stop it fren, boofers pupper heck ruff.</p></div>
+          <div id="how-wrapper" class="text-wrapper"><p id="how-text" class="column-text">Dat tungg tho pupperino length boy. borkdrive aqua doggo. Maximum borkdrive long doggo extremely cuuuuuute you are doing me the shock borkf , heckin good boys doggo doge. The heighborhood pupper borkf smol corgo long water snoob stop it fren, boofers pupper heck ruff.</p></div>
           <input type="submit" id="how-button" class="column-button" name="how" value="How">
           <form id="how-column-modification" class="column-modification hidden" action="index.html" method="post">
             <label class="label" for="how-pixel">Font Size<input type="text" id="how-pixel" class="pixel"></label>
@@ -67,7 +67,7 @@
         <div id="what" class="column">
           <h2 class="title-2">what is dogs</h2>
           <img class="image--circle column-image " src="images/dog3-sq.jpg" alt="dog">
-          <div class="text-wrapper"><p id="what-text" class="column-text">Long doggo smol borking doggo with a long snoot for pats pupperino h*ck hecking angery woofer shoober aqua doggo heck, doggo aqua doggo most angery pupper I have ever seen heckin angery woofer pupper. ruff adorable doggo very hand that feed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.</p></div>
+          <div id="what-wrapper" class="text-wrapper"><p id="what-text" class="column-text">Long doggo smol borking doggo with a long snoot for pats pupperino h*ck hecking angery woofer shoober aqua doggo heck, doggo aqua doggo most angery pupper I have ever seen heckin angery woofer pupper. ruff adorable doggo very hand that feed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.</p></div>
           <input type="submit" id="what-button"  class="column-button" name="what" value="What">
           <form id="what-column-modification" class="column-modification hidden" action="index.html" method="post">
             <label class="label" for="what-pixel">Font Size<input type="text" id="what-pixel" class="pixel"></label>
@@ -85,7 +85,7 @@
         <div id="facts" class="column">
           <h2 class="title-2">facts from dogs</h2>
           <img class="image--circle column-image " src="images/dog4-sq.jpg" alt="dog">
-          <div class="text-wrapper"><p id="facts-text" class="column-text">Most angery pupper I have ever seen such treat heck, dat tungg tho. You are doin me a concern shibe such treat ruff heck, stop it fren ur givin me a spook. Puggorino long water shoob dat tungg tho very hand that feed shibe long bois he made many woofs.</p></div>
+          <div id="facts-wrapper" class="text-wrapper"><p id="facts-text" class="column-text">Most angery pupper I have ever seen such treat heck, dat tungg tho. You are doin me a concern shibe such treat ruff heck, stop it fren ur givin me a spook. Puggorino long water shoob dat tungg tho very hand that feed shibe long bois he made many woofs.</p></div>
           <input type="submit" id="facts-button" class="column-button" name="facts" value="Facts">
           <form id="facts-column-modification" class="column-modification hidden" action="index.html" method="post">
             <label class="label" for="facts-pixel">Font Size<input type="text" id="facts-pixel" class="pixel"></label>
