--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div id="how-wrapper" class="text-wrapper"><p id="how-text" class="column-text">Dat tungg tho pupperino length boy. borkdrive aqua doggo. Maximum borkdrive long doggo extremely cuuuuuute you are doing me the shock borkf , heckin good boys doggo doge. The heighborhood pupper borkf smol corgo long water snoob stop it fren, boofers pupper heck ruff.</p></div>
           <input type="submit" id="how-button" class="column-button" name="how" value="How">
           <form id="how-column-modification" class="column-modification hidden" action="index.html" method="post">
-            <label class="label" for="how-pixel">Font Size<input type="text" id="how-pixel" class="pixel"></label>
+            <label class="label" for="how-pixel">Font Size<input type="text" id="how-pixel" class="pixel" placeholder="type number"></label>
             <label class="label" for="color">Choose color
               <select id="how-color-picker" class="color-picker">
                 <option value="black">Black</option>
@@ -70,7 +70,7 @@
           <div id="what-wrapper" class="text-wrapper"><p id="what-text" class="column-text">Long doggo smol borking doggo with a long snoot for pats pupperino h*ck hecking angery woofer shoober aqua doggo heck, doggo aqua doggo most angery pupper I have ever seen heckin angery woofer pupper. ruff adorable doggo very hand that feed shibe. Extremely cuuuuuute corgo waggy wags stop it fren.</p></div>
           <input type="submit" id="what-button"  class="column-button" name="what" value="What">
           <form id="what-column-modification" class="column-modification hidden" action="index.html" method="post">
-            <label class="label" for="what-pixel">Font Size<input type="text" id="what-pixel" class="pixel"></label>
+            <label class="label" for="what-pixel">Font Size<input type="text" id="what-pixel" class="pixel" placeholder="type number"></label>
             <label class="label" for="color">Choose color
               <select id="what-color-picker" class="color-picker">
                 <option value="black">Black</option>
@@ -88,7 +88,7 @@
           <div id="facts-wrapper" class="text-wrapper"><p id="facts-text" class="column-text">Most angery pupper I have ever seen such treat heck, dat tungg tho. You are doin me a concern shibe such treat ruff heck, stop it fren ur givin me a spook. Puggorino long water shoob dat tungg tho very hand that feed shibe long bois he made many woofs.</p></div>
           <input type="submit" id="facts-button" class="column-button" name="facts" value="Facts">
           <form id="facts-column-modification" class="column-modification hidden" action="index.html" method="post">
-            <label class="label" for="facts-pixel">Font Size<input type="text" id="facts-pixel" class="pixel"></label>
+            <label class="label" for="facts-pixel">Font Size<input type="text" id="facts-pixel" class="pixel" placeholder="type number"></label>
             <label class="label">Choose color
               <select id="facts-color-picker" class="color-picker">
                 <option value="black">Black</option>
