--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Dog Party 2.0</title>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+    <link rel="stylesheet" href="new.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
@@ -36,9 +38,9 @@
     <main>
       <section class="name-the-dog-block">
         <div class="name-the-dog-form__wrapper">
-          <h1 class="title-1">A site about <span id="dog-name">some dog</span></h1>
           <img class="image--circle name-the-dog-image" src="images/dog1-sq.jpg" alt="Name This Dog">
           <form id="name-form" class="name-the-dog-form" action="index.html" method="post">
+            <h1 class="title-1">A site about <span id="dog-name">some dogs</span></h1>
             <label for="name-the-dog">Name</label>
             <input id="name-the-dog" type="text" name="name">
             <input id="name-button" class="name-the-dog-button" type="submit" name="submit" value="Name This Dog">
@@ -48,7 +50,7 @@
       <section class="how-what-facts-block">
         <div id="how" class="column">
           <h2 class="title-2">how to dog</h2>
-          <img class="image--circle column-image " src="images/dog2-sq.jpg" alt="dog">
+          <img class="image--circle column-image" src="images/dog2-sq.jpg" alt="dog">
           <div id="how-wrapper" class="text-wrapper"><p id="how-text" class="column-text">Dat tungg tho pupperino length boy. borkdrive aqua doggo. Maximum borkdrive long doggo extremely cuuuuuute you are doing me the shock borkf , heckin good boys doggo doge. The heighborhood pupper borkf smol corgo long water snoob stop it fren, boofers pupper heck ruff.</p></div>
           <input type="submit" id="how-button" class="column-button" name="how" value="How">
           <form id="how-column-modification" class="column-modification hidden" action="index.html" method="post">
@@ -100,7 +102,7 @@
             <input type="submit" id="facts-change-button" class="change-button" name="how" value="Change">
           </form>
         </div>
-        <div class="show-button-wrapper">
+        <div class="show-button-wrapper hidden">
           <input type="submit" id="show-button" class="show-button" name="how" value="Edit">
         </div>
       </section>
@@ -114,6 +116,6 @@
         <object class="link-image" data="images/linkedin.svg" type="image/svg+xml"><a href="linkedin.com"></a></object>
       </div>
     </footer>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
   </body>
 </html>
